--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "beautifulsoup4>=4.13.4",
+    "asyncio>=3.4.3",
     "duckduckgo-search>=8.0.1",
-    "lxml-html-clean>=0.4.2",
-    "readability-lxml>=0.8.1",
-    "requests>=2.32.3",
+    "openai>=1.76.0",
+    "rich>=14.0.0",
 ]
