--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "asyncio>=3.4.3",
     "duckduckgo-search>=8.0.1",
     "openai>=1.76.0",
+    "playwright==1.50.0",
     "rich>=14.0.0",
 ]
