--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "asyncio>=3.4.3",
     "duckduckgo-search>=8.0.1",
+    "firecrawl-py>=2.4.0",
     "openai>=1.76.0",
     "playwright==1.50.0",
     "rich>=14.0.0",
