--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "firecrawl-py>=2.4.0",
     "openai>=1.76.0",
     "playwright==1.50.0",
+    "prompt-toolkit>=3.0.51",
     "rich>=14.0.0",
     "tiktoken>=0.9.0",
+    "typer[all]>=0.15.2",
 ]
