--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "asyncio>=3.4.3",
+    "baidusearch>=1.0.3",
     "duckduckgo-search>=8.0.1",
     "firecrawl-py>=2.4.0",
     "openai>=1.76.0",
